first pass at making the TSP side transitions
